This is a history of major changes to {my wmii configuration}[http://people.ucsc.edu/~skurapat/wmii.html].


= 2006-09-16

* Fixed toggling of maximization of currently focused client, via toggle_maximize in rc.rb.
  * Thanks to Fredrik for reporting this bug.


= 2006-09-15

* Added Wmii.get_view and Wmii.get_client methods, to further minimize hard-coded IXP file system paths. This will make it easier to upgrade to wmii-4 later on.

* Fixed ruby-ixp to be internally buffered for Ixp#read.
  * Event loop now uses Ixp#read instead of *wmiir*.
    * Already running configurations now correctly exit when another instance starts up.


= 2006-09-14

* Added ability to swap current client with the currently focused client in any other column.


= 2006-09-13

* Reverted to *wmiir* for event loop, because Ixp#read isn't internally buffered!

* Changed Wmii::View#each to Wmii::View#each_column because floating area isn't a column (it doesn't have /mode file).

* Added shortcuts for setting layouts of all columns in current view.

* Added shortcuts for selection of current column.

* Fixed ability to terminate multiple clients.


= 2006-09-12

* Event loop now uses Ixp#read instead of *wmiir*.
  * Already running configurations now correctly exit when another instance starts up.

* Added Wmii::View#diamond! -- a diamond-shaped automated client arrangement.

* Added Wmii::Area#length= for setting number of clients in a column.


= 2006-09-11

* Added exception logging and recovery mechanism.
  * wmiirc is now split into a loader file (wmiirc) and a configuration file (wmiirc-config.rb), just like in the ruby-wmii project.

* IXPException' are no longer hidden away inside Ixp.

* Moved support for destructive area-operations from Wmii#with_selection into Array#each so that it is generally available.


= 2006-09-10

* Added wmiish--an interactive Ruby shell for controlling wmii.

* Lots of major refactoring in Ixp and Wmii.
  * Moved utility methods from wmiirc into rc.rb.

